# torqueVectoring

./: .gitignore  Linear_Model.c  README.md  README_HARDWARE.md  README_SOFTWARE.md
ArduinoNano/: ArduinoNano.ino
ArduinoNanoReceiver/: sdkconfig
ArduinoNanoReceiver/main/: accel.c
SrDes-Circuit Diagram/: test.xml
SrDes-DAC/: CMakeLists.txt
SrDes-DAC/main/: CMakeLists.txt  dac_test.c
SrDes-MCP4725-master/: CMakeLists.txt  Makefile  README.md
SrDes-MCP4725-master/main/: CMakeLists.txt  mcp4725_example.c
SrDes-accelerometer/: CMakeLists.txt  README.md
SrDes-accelerometer/main/: Adafruit_ISM330DHCX.h  (+3 more)
SrDes-arduino_aux_controller/: ArduinoNano.ino  SrDes-Arduino_aux_controller.ino
SrDes-aux_controller/: CMakeLists.txt  Makefile  sdkconfig
SrDes-canbus/: CMakeLists.txt  Makefile
SrDes-main_controller/: CMakeLists.txt  Makefile  sdkconfig
SrDes-main_controller/main/: Adafruit_ISM330DHCX.h  CMakeLists.txt  Linear_Model.c  Linear_Model.h  Linear_Model_data.c  Linear_Model_private.h  Linear_Model_types.h  Will.c  builtin_typeid_types.h  main_controller.c  mcp4725_example.c  multiword_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_logging.h  rt_mxclassid.h  rt_nonfinite.c  rt_nonfinite.h  rtmodel.h  rtw_matlogging.h  rtwtypes.h
SrDes-motor_controller/: CMakeLists.txt  Makefile  sdkconfig
SrDes-speed_emulator/: CMakeLists.txt  Makefile
SrDes-uart_simple/: CMakeLists.txt
SrDes-watchdog/: Makefile  sdkconfig.old
linearModel/: Linear_Model.c
uart_simple/: .cproject  .project  CMakeLists.txt
watchdog/: CMakeLists.txt  sdkconfig
(+18 files in other folders)
